src/App.css
body {
  margin: 0;
  padding: 0;
  width: 100%;
}

.App {
  margin: 0;
  padding: 0;
  text-align: center;
  font-family: "courier", serif;
}

.header h1 {
  background-color: black;
  color: white;
  width: 100%;
  margin: 0;
  padding-top: 60px;
  padding-bottom: 40px;
}

.intro-text {
  width: 45%;
  margin: auto;
  margin-top: 30px;
  font-size: 14px;
}

#home-input {
  padding-top: 20px;
}

#crypto-input {
  margin-bottom: 5px;
  width: 35%;
  height: 5rem;
}

#submit {

}

.black-char {
  color: white;
  background-color: #272727;
  margin-right: 2px;
  margin-bottom: 10px;
  padding: 6px;
  font-size: 16px;
}

.white-char {
  color: #272727;
  background-color: white;
  margin-right: 2px;
  margin-bottom: 10px;
  padding: 5px;
  font-size: 20px;
}

.index-char {
  color: white;
  background-color: #272727;
  margin-right: 2px;
  margin-bottom: 10px;
  padding: 6px;
  font-size: 20px;
}

.crypto-text {
  width: 75%;
  margin: auto;
  margin-top: 30px;
  font-size: 14px;
  line-height: 2rem;
}

.alpha-key {
  margin-top: 30px;
}

.letter-box {
  color: #272727;
  background-color: white;
  margin-right: 1px;
  margin-bottom: 10px;
  padding: 5px;
  font-size: 14px;
  width: 13px;
  height: 24px;
  border: 1px solid;
  text-align: center;
}

